--- a/css/css.css
+++ b/css/css.css
@@ -7,7 +7,8 @@ body{
 			color: rgb(80,80,80); 
 			text-align: center;
 			font-size: 48px;
-			border: solid;
+			border-top: 1px;
+			border-bottom: 1px;
 			border-color: rgb(80,80,80);
 			padding: 15px
 		}
